# mirae-workbook

./: .gitignore  CLAUDE.md  README.md  build-and-sign.sh  build-windows.ps1  build-windows.sh  index.html  package-lock.json  package.json  vite.config.js
deploy/multi-user/: README.md  add-test-user.sh  add-users-90-98.sh  deploy-frontend.sh  fix-acl.sh  install-acl-timer.sh  prelogin-copy.sh  reset-all-users.sh  setup-server.sh  setup-ttyd.sh  setup-vnc.sh  tmux.conf
docs/: audit-workbook.py  build-handout-pptx.py  build-home-practice-pptx.py  build-pdf.py  build-workbook-ui-pptx.py  handout-workbook-ui.md  handout.docx  handout.md  handout.pptx  home-practice.pptx  workbook-ui.pptx
key-changer/: change-key.bat  change-key.py
src/: NativeTerminal.jsx  main.jsx  wkwebview-ime-patch.js  workbook.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: CLAUDE.md
src-tauri/resources/templates/: 미래에셋생명_B.docx
src-tauri/src/: main.rs
src/components/: AdminDashboard.jsx  AssistantOverlay.jsx  Confetti.jsx  DeptTaskInput.jsx  FileExplorer.jsx  GrowthChart.jsx  MissionProgressTracker.jsx  MissionSlide.jsx  TtydEmbed.jsx
src/hooks/: useMissionProgress.js  usePersonalization.js
src/lib/: runtime.js
tests/: e2e-test.sh  frontend-validation.sh  integration-server.sh  learner-journey.sh  load-test.sh  run-all.sh  ui-render-check.sh  unit-shell-scripts.sh
tests/fixtures/: mock-admin-action.sh  mock-coach.sh  mock-grade-mission.sh  mock-sudo.sh
(+11 files in other folders)
